--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,48 @@
-.header__logo{
-    width: 200px;
+.header {
+    height: 746px;
+    background-image: url(../img/header/header_background.png);
+    background-position: center;
+    max-width: none;
+}
+
+.header__logo {
+    width: 174px;
+}
+
+.header__nav {
+    padding: 30px 24px;
+}
+
+.header__banner {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 150px 15px 150px 15px;
+    text-align: center;
+}
+
+.header__banner-title {
+    color: var(--color-title);
+    font-size: calc(2em + 3vw);
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    line-height: 46px;
+    padding-bottom: 15px;
+}
+
+.header__banner-text {
+    color: var(--color-text);
+    font-size: 19px;
+    line-height: 31px;
+    padding: 14px;
+    max-width: 800px
+}
+
+.header__banner-download {
+    color: var(--color-elements);
+    text-decoration: none;
+    font-size: 17px;
+    line-height: 27px;
+    font-weight: 700;
+    padding: 14px;
 }
