--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,3 @@
-
 .header {
     background-image: url(../img/header/header_background.png);
     background-position: center;
@@ -50,9 +49,79 @@
     font-weight: 700;
     padding: 14px;
 }
+
 @media (max-width: 500px) {
     .header {
         height: 85vh;
     }
 
 }
+
+/* @media (min-width: 900px) {
+    .header__contacts {
+        display: flex;
+        flex-direction: row;
+        padding: 25px 0 30px 0;
+        max-width: 1200px;
+        margin: auto;
+        justify-content: space-between;
+    }
+
+    .header__contacts-support {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .header__contacts-write {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .support__text {
+        color: var(--color-elements);
+        margin-right: 4px;
+    }
+
+    .support__link {
+        color: var(--color-link);
+        text-decoration: none;
+    }
+
+    .write__text {
+        color: var(--color-elements);
+        margin-right: 4px;
+    }
+
+    .write__link {
+        color: var(--color-link);
+        text-decoration: none;
+    }
+
+    .header__line {
+        height: 0.5px;
+        width: 1200px;
+        background-color: rgba(192, 192, 192, 0.315);
+        margin: auto;
+    }
+
+    .header__menu {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .header__menu-list {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .header__list {
+        margin: 8px;
+        text-decoration: none;
+        color: var(--color-link);
+    }
+
+    .header__menu-list {
+        list-style: none;
+    }
+} */
