--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,8 @@
 
 .header__logo {
     width: 174px;
+    height: 40px;
+
 }
 
 .header__nav {
@@ -26,7 +28,7 @@
 
 .header__banner-title {
     color: var(--color-title);
-    font-size: calc(2em + 3vw);
+    font-size: calc(2em + 2vw);
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     line-height: 46px;
