--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 @import url(controls.css);
 @import url(header.css);
 @import url(why__wrapper.css);
-@import url(ico__progress.css);
+@import url(ico-progress.css);
 @import url(advantages.css);
 @import url(stages.css);
 @import url(distribution.css);
