--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,8 @@
 @import url(team.css);
 @import url(media-about-cryptochange);
 @import url(section-question-need-cryptochange.css);
-@import url(section-feedback-from-investors);
+@import url(statistics-blocks.css);
+@import url(section-feedback-from-investors.css);
 @import url(investors-carousel);
 @import url(news.css);
 @import url(footer.css);
