--- a/css/index.css
+++ b/css/index.css
@@ -12,5 +12,6 @@
 @import url(section-question-need-cryptochange.css);
 @import url(statistics-blocks.css);
 @import url(section-feedback-from-investors.css);
+@import url(container-investors-carousel.css);
 @import url(news.css);
 @import url(footer.css);
