--- a/css/section-feedback-from-investors.css
+++ b/css/section-feedback-from-investors.css
@@ -24,13 +24,16 @@
     width: 100%;
     border-radius: 50%;
 }
-.investor-smith, .investor-johnson, .investor-stuart{
+.smith-photo, .johnson-photo, .stuart-photo{
     width: 70px;
     height: 70px;
     border-radius: 50%;
 }
 .container__carrousel-with-investors-feedback{
-    display:flex;
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    grid-template-rows: auto;
+    grid-column-gap: 30px;
     padding-right: 40px;
     padding-left: 40px;
     margin-top: 50px;
