--- a/css/statistics-blocks.css
+++ b/css/statistics-blocks.css
@@ -1,5 +1,8 @@
 .block__statistic{
-    display:flex;
+    display: grid;
+    grid-template-columns: 200px 200px 200px 200px;
+    grid-template-rows: auto;
+    grid-column-gap: 30px;
     padding-right: 40px;
     padding-left: 40px;
     margin-top: 50px;
@@ -9,7 +12,6 @@
 .block__title_statistic-in-dollar{
     color:var(--color-elements);
     font-size: 30px;
-    box-sizing: border-box;   
 }
 .block__title-statistic-users{
     color:var(--color-elements);
@@ -49,13 +51,15 @@
     color: var(--subtitle-statistic-text-color);
     font-family: 'Fira Sans', sans-serif;
     font-size: 15px;
-    display: inline;
+    display: inline;   
+    word-wrap: break-word;
 }
 .subtitle__text-statistic-speed-transactions{
     color: var(--subtitle-statistic-text-color);
     font-family: 'Fira Sans', sans-serif;
     font-size: 15px;
     display: inline;
+    word-wrap: break-word;
 }
 
 hr{
