--- a/css/index.css
+++ b/css/index.css
@@ -13,5 +13,6 @@
 @import url(statistics-blocks.css);
 @import url(section-feedback-from-investors.css);
 @import url(container-investors-carousel.css);
+@import url(section-crypto-news.css);
 @import url(news.css);
 @import url(footer.css);
