--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Ubuntu:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Ubuntu:wght@700&display=swap');
 
 * {
     margin: 0;
@@ -11,16 +10,16 @@
     --color-text: rgb(207, 205, 216);
     --color-title: #fff;
     --color-link:rgba(255,255,255,0.49);
-    --section-title-text-color: #FFFFFF;
-    --subtitle-statistic-text-color:#A7A7B1;
-    --dash-between-title-and-subtitle-color:#ffffff1c;
-    --section-question-need-cryptochange-background-color:#21283D;
-    --dash-before-title-question-need-cryptochange-color:#FFB811;
-    --color-background-button: rgb(255 184 17);
+    /* --section-title-text-color: #FFFFFF; Замінити на --color-title */
+    /* --subtitle-statistic-text-color:#A7A7B1;  Замінити на --color-text */
+    /* --dash-between-title-and-subtitle-color:#ffffff1c; Замінити назву */
+    /* --section-question-need-cryptochange-background-color:#21283D;  Замінити назву */
+    /* --dash-before-title-question-need-cryptochange-color:#FFB811; Замінити на --color-elements */
+    /* --color-background-button: rgb(255 184 17); Замінити на --color-elements */
     --color-text-button: rgb(26, 28, 40);
-    --textname-investors-color:#FFFFFF;
-    --subtitle-text-speech-investors-color:#A7A7B1;
-    --date-post-speech-investors-color: #4D8EFF;
+    /* --textname-investors-color:#FFFFFF;  Замінити на --color-title */
+    /* --subtitle-text-speech-investors-color:#A7A7B1;  Замінити на --color-text */
+    /* --date-post-speech-investors-color: #4D8EFF; Замінити назву */
     font-family: 'Fira Sans', sans-serif;
 }
 .container {
