--- a/css/ico__progress.css
+++ b/css/ico__progress.css
@@ -3,9 +3,9 @@
     padding: 55px 0 20px;
 }
 
-.container {
+/* .container {
     padding: 0 24px;
-}
+} */
 
 .section-title__title {
     font-family: 'Ubantu', sans-serif;
