--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,10 @@
 @import url(core__features.css);
 @import url(team.css);
 @import url(media-about-cryptochange.css);
-/* @import url(section-question-need-cryptochange.css);
-@import url(statistics-blocks.css);
-@import url(section-feedback-from-investors.css);
-@import url(container-investors-carousel.css);
-@import url(section-crypto-news.css);
+/* @import url(section-question-need-cryptochange.css); */
+/* @import url(statistics-blocks.css); */
+/* @import url(section-feedback-from-investors.css); */
+/* @import url(container-investors-carousel.css); */
+/* @import url(section-crypto-news.css); */
 @import url(news.css);
 @import url(footer.css);
