--- a/css/core__features.css
+++ b/css/core__features.css
@@ -16,13 +16,28 @@
     text-align: left;
     text-transform: none;
     color: var(--color-title);
+    background-color: rgb(26, 28, 40);
 }
 .features__believe {
-    color: rgb(207, 205, 216);
+    color: var(--color-text);
     font-family: "Fira Sans", sans-serif;
     font-size: 19px;
     font-style: normal;
     font-weight: 400;
     text-align: left;
     text-transform: none;
+}
+.features__question {
+    color: rgb(127,132,221);
+    font-family: "Fira Sans", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    text-align: left;
+    text-transform: none;
+    line-height: 24px;
+    cursor: pointer;
+}
+.features__link {
+
 }
