--- a/css/core__features.css
+++ b/css/core__features.css
@@ -28,6 +28,17 @@
     text-transform: none;
 }
 .features__question {
+    color: var(--color-text);
+    font-family: "Fira Sans", sans-serif;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    text-align: left;
+    text-transform: none;
+    line-height: 27.2px;
+    cursor: pointer;
+}
+.features__link {
     color: rgb(127,132,221);
     font-family: "Fira Sans", sans-serif;
     font-size: 15px;
@@ -37,7 +48,4 @@
     text-transform: none;
     line-height: 24px;
     cursor: pointer;
-}
-.features__link {
-
 }
