--- a/css/core__features.css
+++ b/css/core__features.css
@@ -2,6 +2,7 @@
 .features__text {
     background-color: #1a1c28;
     display: flex;
+    flex-direction: column;
 }
 
 .features__start features__continue {
@@ -49,4 +50,13 @@
     text-transform: none;
     line-height: 24px;
     cursor: pointer;
+}
+
+
+@media (min-width: 600px) {
+    .features__text {
+        flex-direction: row;
+        flex: 1;
+        justify-content: space-around;
+    }
 }
