--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
 @import url(media-about-cryptochange);
 @import url(section-question-need-cryptochange.css);
 @import url(statistics-blocks.css);
+@import url(experienced-team-job.css);
 @import url(section-feedback-from-investors.css);
 @import url(news.css);
 @import url(footer.css);
