--- a/css/core__features.css
+++ b/css/core__features.css
@@ -1,4 +1,7 @@
-
+#download_application {
+    background-color: #2e3e61;
+    
+}
 .features__text {
     background-color: #2e3e61;
     display: flex;
