--- a/css/core__features.css
+++ b/css/core__features.css
@@ -54,7 +54,7 @@
 }
 
 .features__carousel-block {
-    background-image: url(..img/background_carousel);
+    background-image: url(../img/background_carousel.svg);
 }
 
 
