--- a/css/core__features.css
+++ b/css/core__features.css
@@ -55,6 +55,13 @@
 
 .features__carousel-block {
     background-image: url(../img/background_carousel.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 
