visual css block 2

--- a/css/why__wrapper.css
+++ b/css/why__wrapper.css
@@ -1,3 +1,28 @@
+.why__wrapper {
+    background:  rgb(26,29,42);
+}
+.text__container-bolt-font{
+    color: rgb(207,205 216)
+
+}
+
+.yellow__line-o {
+    color: rgb(255, 184, 17);
+}
+
+.text__container-bolt-font{
+    color: #f8f8f8 ;
+}
+.text__container{
+    color: #f8f8f8
+}
+.why__header {
+    color: #f8f8f8 ;
+}
+
+.links__container-arrow{
+    color: #f8f8f8
+}
 .w__icon{
     width: 25px
 }
