--- a/css/advantages.css
+++ b/css/advantages.css
@@ -1,3 +1,3 @@
 .advantages {
-    background: linear-gradient(0deg, #2e3e61 0%, rgb(33, 40, 61) 100%);
+    background: linear-gradient(0deg, #2e3e61 0%, rgb(46,62,97) 100%);
 }
