--- a/css/investors-feedback.css
+++ b/css/investors-feedback.css
@@ -1,5 +1,5 @@
-.news {
-    background-image: linear-gradient(0deg, rgb(26, 28, 40) 0%, rgb(33, 40, 61) 100%);
+.investors-feedback {
+    background-color: var(--color-background-statistics);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -10,41 +10,41 @@
     font-size: 20px;
 }
 
-.wrapper-news {
+.wrapper__headline-feedback {
     display: flex;
     padding-right: 40px;
     padding-left: 40px;
     justify-content: left;
 }
 
-.container__title-news {
+.container__feedback-dash {
+    color: var(--color-dash-and-title-statistic);
+    display: flex;
+    padding-top: 0;
+    padding-right: 15px;
+    padding-bottom: 0px;
+    padding-left: 15px;
+    justify-content: left;
+    align-items: start;
+}
+
+.dash__large {
+    border-image-width: 1;
+}
+
+.container__headline-feedback-text {
     color: var(--color-headline-and-title);
+    display: block;
+    justify-content: center;
 }
 
-.container__divider-news {
-    background: var(--color-dash-and-title-statistic);
-    height: 3px;
-    border: 0;
-    width: 20%;
-}
-
-.container__text-article-news {
-    color: var(--color-headline-and-title);
-    font-size: 17px;
-}
-
-.article__datetime-news {
-    color: var(--color-datetime-news);
-    font-size: 13px;
-}
-
-.wrapper-news-images {
+.image__investors {
     width: 70px;
     border-radius: 50%;
 }
 
 @media (min-width: 768px) {
-    .wrapper__news {
+    .wrapper__headline-feedback {
         display: flex;
         padding-right: 40px;
         padding-left: 40px;
