optimizingoptimizing code in index.html

--- a/css/investors-carousel.css
+++ b/css/investors-carousel.css
@@ -11,7 +11,7 @@
 }
 
 .container__investors {
-    background-color: #2A3045;
+    background-color:var(--color-background-substrate);
     padding-top: 40px;
     padding-right: 45px;
     padding-bottom: 40px;
@@ -20,13 +20,13 @@
 }
 
 .text__title-fnames-investors {
-    color: var(--color-headline-and-title);
+    color: var(--color-text);
     font-size: 22px;
     font-family: 'Ubuntu', sans-serif;
 }
 
 .text__article-investors {
-    color: var(--color-subtitle-statistics);
+    color: var(--color-subtitle);
     font-family: 'Fira Sans', sans-serif;
     font-size: 17px;
 }
