--- a/css/investors-feedback.css
+++ b/css/investors-feedback.css
@@ -18,7 +18,7 @@
 }
 
 .container__feedback-dash {
-    color: var(--color-dash-and-title-statistic);
+    color: var(--color-elements);
     display: flex;
     padding-top: 0;
     padding-right: 15px;
@@ -33,7 +33,7 @@
 }
 
 .container__headline-feedback-text {
-    color: var(--color-headline-and-title);
+    color: var(--color-title);
     display: block;
     justify-content: center;
 }
