resizing in css file

--- a/css/question-with-statistics.css
+++ b/css/question-with-statistics.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    min-width: 320px;
     padding-top: 55px;
     padding-bottom: 60px;
     font-size: 20px;
@@ -16,6 +15,7 @@
     padding-right: 40px;
     padding-left: 40px;
     justify-content: left;
+    min-height: 126px;
 
 }
 
@@ -28,6 +28,7 @@
     padding-left: 15px;
     justify-content: left;
     align-items: start;
+    min-width: none;
 }
 
 .dash__large {
@@ -38,6 +39,7 @@
     color: var(--color-title);
     display: block;
     justify-content: center;
+    min-width: none;
 }
 
 @media (min-width: 768px) {
