--- a/css/experienced-team-job.css
+++ b/css/experienced-team-job.css
@@ -88,6 +88,7 @@
 
 .job__line {
     width: 100%;
+  
 }
 
 .job__item {
@@ -108,16 +109,7 @@
     color: var(--color-title);
     padding-top: 30px;
 }
-.press__contact-us-button{
-    font-size:  15px;
-    color: #1a1c28;
-    width:124px;
-    height:48px;
-    background-color: #ffb811;
-    text-decoration: none;
-    text-align: center;
-    
-}
+
 .job__apply {
     color: #ffb811;
     text-decoration: none;
@@ -143,15 +135,36 @@
     font-weight: 400;
     color: #A7A7B1;
 }
-
+.press__become-a-partner{
+    padding-top:30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
 .paragraph__want-become-a-partner {
     font-size: 19px;
     color: #CFCDD8;
     font-style: italic;
+    
+}
+.paragraph__want-become-a-partner span{
+    color:#ffb811;
+}
+.press__contact-us-button{
+    font-size:  15px;
+    color: #1a1c28;
+    width:124px;
+    height:48px;
+    background-color: #ffb811;
+    text-decoration: none;
+    text-align: center;
+    padding-top:13px;
+    
 }
 .press__learn-more{
     font-size: 16px;
     color: #fff;
     font-weight: 600;
     text-decoration: none;
+    padding-top:12px;
 }
