--- a/css/core__features.css
+++ b/css/core__features.css
@@ -94,7 +94,17 @@
 
 .advantage__block {
     display: flex;
-    flex-direction: column;
+    padding: 8px 0px 8px 0px;
+}
+
+.advantage__icon-box {
+    width: 50px;
+    height: 50px;
+    background: #1a1c28;
+    display: flex;
+    border-radius: 50%;
+    margin: 7px;
+
 }
 
 .advantage__text {
@@ -105,13 +115,11 @@
 .advantage__icon {
     width: 26px;
     height: 26px;
-    background: #1a1c28;
+    margin: auto;
 }
-.advantage__label label {
-    width: 320px;
-    flex-direction: row;
-    flex: 1;
-    justify-content: space-around;
+.advantage__label {
+    display: flex;
+    column-gap: 20px;
 }
 
 .label__appstore, .label__googleplay {
@@ -121,7 +129,7 @@
     border-color: white;
     border-width: 0.5px;
     border-style: solid;
-    border-radius: 3%;
+    border-radius: 4%;
 }
 .advantage__name {
     color: var(--color-text);
