--- a/css/investors-carousel.css
+++ b/css/investors-carousel.css
@@ -1,8 +1,8 @@
 .container__carousel-investors {
     display: grid;
-    grid-template-columns: 400px 400px 400px;
+    grid-template-rows: 400px 400px 400px;
     grid-template-rows: auto;
-    grid-column-gap: 30px;
+    gap: 30px;
     padding-right: 40px;
     padding-left: 40px;
     margin-top: 50px;
@@ -36,4 +36,18 @@
     font-family: 'Fira Sans', sans-serif;
     font-size: 12px;
     margin-top: 20px;
+}
+
+@media (min-width: 768px) {
+    .container__carousel-investors {
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    grid-column-gap: 30px;
+    padding-right: 40px;
+    padding-left: 40px;
+    margin-top: 50px;
+    justify-content: center;
+    font-family: 'Ubuntu', sans-serif;
+    }
+
 }
