fix-problems-css

--- a/css/statistic-blocks.css
+++ b/css/statistic-blocks.css
@@ -5,7 +5,7 @@
     padding-right: 40px;
     padding-left: 40px;
     margin-top: 50px;
-    min-width: 634.8px;
+    min-height: 634.8px;
 }
 
 .text__title-statistics {
