--- a/css/experienced-team-job.css
+++ b/css/experienced-team-job.css
@@ -52,7 +52,9 @@
     flex-direction: row;
     align-items: center;
 }
-
+.experienced__team-item-empty{
+    height: 85px;
+}
 .experienced__team-icon {
     width: 70px;
     height: 70px;
