--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,13 @@
+.footer__footer_wrapper {
+        background-color: var(--color-background);
+        width: 100%;
+        padding: 60px 30px;
+    }
 
 @media (max-width: 1920px) {
     .footer__footer_wrapper {
         background-color: var(--color-background);
-        width: fit-content;
+        width: 100%;
         padding: 60px 60px;
     }
 }
@@ -10,7 +15,7 @@
 @media (max-width: 960px) {
     .footer__footer_wrapper {
         background-color: var(--color-background);
-        width: fit-content;
+        width: 100%;
         padding: 60px 45px;
     }
 }
@@ -18,19 +23,17 @@
 @media (max-width: 480px) {
     .footer__footer_wrapper {
         background-color: var(--color-background);
-        width: fit-content;
+        width: 100%;
         padding: 60px 30px;
     }
 }
 
-
-.footer__company-info {
-    width: fit-content;
+.footer__footer_wrapper {
+    display: block;
+    width: 100%;
 }
 
 .footer__company-info-logo {
-    display: block;
-    justify-content: center;
     width: 190px;
     margin: 0px  auto 30px auto;
 }
@@ -40,16 +43,118 @@
     font-family: "Fira Sans", sans-serif;
     font-size: 14px;
     text-align: center;
+    line-height: 24px;
 }
 
 .footer__company-info-buy-crp-tokens {
-    color: var(--color-text);
+    display: flex;
+    justify-content: center;
+    margin: 30px  auto 30px auto;
+    color: rgb(127, 132, 221);
     font-family: "Fira Sans", sans-serif;
     font-size: 14px;
     font-weight: 700;
+    text-decoration: none;
+}
+
+.footer__useful-links {
+    
+}
+
+.footer__useful-links-header {
     text-align: center;
+    color: var(--color-text);
+    font-family: "Ubuntu", sans-serif;
+    font-size: 18px;
+    margin: 60px 0px 15px 0px;
+}
+
+.footer__useful-links-header-underline {
+    width: 50px;
+    height: 3px;
+    background-color:rgb(127, 132, 221);
+    margin: 15px auto;
+}
+
+
+.footer__useful-links-menu-item {
+    display: block;
+    text-align: center;
+    color: var(--color-link);
+    font-family: "Fira Sans", sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    text-decoration: none;
+    margin: 15px;
+}
+
+.footer__follow-us-want-to-know-more {
+    
+}
+
+.footer__follow-us-info {
+    
+}
+
+.footer__follow-us-header {
+    text-align: center;
+    color: var(--color-text);
+    font-family: "Ubuntu", sans-serif;
+    font-size: 18px;
+    margin: 60px 0px 15px 0px;
+}
+
+.footer__follow-us-header-underline {
+    width: 50px;
+    height: 3px;
+    background-color:rgb(127, 132, 221);
+    margin: 15px auto;
+}
+
+.footer__follow-us-paragraph {
+    color: var(--color-text);
+    font-family: "Fira Sans", sans-serif;
+    font-size: 14px;
+    text-align: center;
+    line-height: 24px;
+}
+
+.footer__follow-us-want-to-know-more {
+    display: flex;
+    justify-content: center;
+    margin: 30px  auto 30px auto;
+    color: rgb(127, 132, 221);
+    font-family: "Fira Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.footer__company-info-icons {
+    margin: auto;
+    width: 40px;
+}
+
+.footer__company-info-icons-item {
+    width: 40px;
+    margin: 5px;
 }
 
 .footer__line {
+    margin: auto;
+    width: 100%;
+}
+
+.footer__line {
+    height: 1px;
     color: rgb(26, 28, 40);
+}
+
+.footer__copyright {
+    text-align: center;
+    font-family: "Fira Sans", sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    color: var(--color-text);
+    margin: 15px;
 }
