--- a/css/experienced-team-job.css
+++ b/css/experienced-team-job.css
@@ -1,29 +1,34 @@
-
-#team{
-    padding:20px 24px;
+#team {
+    padding: 20px 24px;
     background-color: var(--color-background-eight-block);
-}
-.experienced__team-and-job-opportunities {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .experienced__team {
-    
+    margin: 0 auto;
 }
+
+.experienced__team-and-job-opportunities {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+}
+
+
 .experienced__team-content {
     display: flex;
     flex-direction: column;
-    margin:15px 0;
+    margin: 15px 0;
+    align-items: center;
 }
+
 .title__container {
     min-height: 65px;
     display: flex;
     flex-direction: row;
     padding-top: 20px;
-    padding-bottom:20px;
-   
+    padding-bottom: 20px;
+    justify-content: center;
+
 }
 
 .title__line {
@@ -44,9 +49,7 @@
 
 
 .experienced__team-content-first-group,
-.experienced__team-content-second-group {
-    
-}
+.experienced__team-content-second-group {}
 
 .experienced__team-item {
     min-height: 85px;
@@ -61,11 +64,13 @@
 
 .experienced__team-icon {
     max-width: 70px;
-    
+
 }
-.experienced__team-icon img{
+
+.experienced__team-icon img {
     border-radius: 50%;
 }
+
 .experienced__team-name {
     font-size: 18px;
     font-weight: 700;
@@ -86,17 +91,21 @@
 .job__opportunities {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .job__line {
-    width: 70%;
+    margin-top: 30px;
+    width: 100%;
 
 }
 
 .job__item {
     display: flex;
     flex-direction: column;
-   margin:30px 5px; 
+    margin-top: 10px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .job__city {
@@ -123,13 +132,21 @@
 .press__media {
     display: flex;
     flex-direction: column;
-    align-items: center;
+
+}
+
+.press__items-wrap {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+
 }
 
 .press__items {
     min-height: 230px;
     display: flex;
     flex-direction: column;
+
 }
 
 .press__icon {
@@ -138,7 +155,8 @@
 }
 
 .container__want-become-partner {
-    background-color: var(--color-background-eight-block);
+    margin: 0 auto;
+    width: 90%;
 }
 
 .press__name {
@@ -146,6 +164,7 @@
     font-size: 17px;
     font-weight: 400;
     color: var(--color-link);
+    text-align: center;
 }
 
 
@@ -188,23 +207,81 @@
     padding-top: 12px;
 }
 
-@media (min-width: 768px) {
-    .experienced__team-and-job-opportunities {
-        padding: 10px 24px;
-    }
-    .experienced__team {
-        min-height: 600px;
-    }
+@media (min-width: 640px) {
     .experienced__team-content {
-       display:flex;
-       flex-direction: row;
-       justify-content: space-evenly;
-       padding-top: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 40px;
+
     }
-    .experienced__team-item-empty {
+
+    .job__line {
         display: none;
     }
-    .title__container {
-        padding-top: 20px;
+
+    .job__item-wrap {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .press__items-wrap {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+    }
+
+    .container__want-become-partner {
+        width: 80%;
+    }
+}
+
+@media (min-width: 768px) {
+
+
+
+
+    .press__items {
+        min-height: 200px;
+    }
+
+    .press__items-wrap {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        column-gap: 10px;
+    }
+
+}
+
+@media (min-width: 992px) {
+    .experienced__team-and-job-opportunities {
+        display: flex;
+        flex-direction: row;
+    }
+
+
+    .job__item-wrap {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+
+    .job__line {
+        display: block;
+    }
+
+    .press__items {
+        min-height: 170px;
+    }
+
+    .press__items-wrap {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        column-gap: 10px;
+    }
+
+    .container__want-become-partner {
+        width: 70%;
     }
 }
